# ToDo_CLI

./: add_todo.py  all_todos.py  create.py  delete_todo_list.py  main.py  pyproject.toml  rename.py  todo.py
todo_cli/: add_todo.py  create.py  main.py
