[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-cli"
version = "0.1.0"
description = "A simple CLI ToDo manager built with Click"
readme = "README.md"
authors = [{ name = "Hossein Pakaein" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.scripts]
todo = "todo_cli.main:cli"
